--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -106,6 +106,14 @@
     .modal-actions{display:flex;gap:10px;justify-content:center;margin-top:12px}
     .btn-secondary{background:#111827;color:#fff}
 
+    /* Botões do modal menores em telas pequenas */
+    @media (max-width: 420px){
+      .modal{padding:16px}
+      .modal h2{font-size:1.1rem}
+      .modal-actions button{padding:10px 14px; font-size:14px; border-radius:12px}
+      .check{font-size:.85rem; padding:6px 10px}
+    }
+
     @media (prefers-reduced-motion:reduce){.pulse-play,.pulse-next{animation:none!important}}
   </style>
 </head>
@@ -132,7 +140,7 @@
     </div>
   </div>
 
-  <!-- Modal Conclusão -->
+  <!-- Modal Conclusão (SEM Download PDF) -->
   <div class="modal-backdrop" id="completeModal" role="dialog" aria-modal="true" aria-labelledby="completeTitle">
     <div class="modal">
       <h2 id="completeTitle">Great job! Phase completed 🎉</h2>
@@ -145,7 +153,6 @@
       <div class="modal-actions">
         <button class="btn-secondary" id="btnBackPhases">Back to phases</button>
         <button id="btnReview">Review the story</button>
-        <button id="btnPDF">Download PDF</button>
       </div>
     </div>
   </div>
@@ -523,8 +530,6 @@
       const total = cardsData.length;
       if(total===0) return;
 
-      // marcar "viewed" como todos até maxVisitedIndex
-      // (opcional; aqui usamos apenas heard[] para dots verdes)
       const allSpoken = heard.slice(0,total).filter(Boolean).length === total;
       const allViewed = maxVisitedIndex === total-1;
 
@@ -570,12 +575,11 @@
       const modal=document.getElementById('completeModal');
       document.getElementById('btnBackPhases')?.addEventListener('click',()=>window.history.back());
       document.getElementById('btnReview')?.addEventListener('click',()=>modal.classList.remove('show'));
-      document.getElementById('btnPDF')?.addEventListener('click',()=>generatePDF());
       modal.addEventListener('click',(e)=>{ if(e.target===modal) modal.classList.remove('show'); });
       document.addEventListener('keydown',(e)=>{ if(e.key==='Escape' && modal.classList.contains('show')) modal.classList.remove('show'); });
     })();
 
-    // ====================== PDF ======================
+    // ====================== PDF (botão ao lado de Read) ======================
     function generatePDF(){
       const j = window.jspdf; if(!j) return;
       const doc = new j.jsPDF();
