--- a/Atividades/Speak3/index.html
+++ b/Atividades/Speak3/index.html
@@ -91,6 +91,8 @@
         .nav-button {
             margin: 0 10px;
         }
+
+        /* ===== Botão do microfone ===== */
         #startButton {
             background-color: #007BFF;
             border: none;
@@ -113,6 +115,56 @@
         #startButton:hover {
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
         }
+
+        /* ===== Animação pulse do microfone ===== */
+        @keyframes micPulse {
+            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0,123,255,0.6); }
+            70% { transform: scale(1.06); box-shadow: 0 0 0 12px rgba(0,123,255,0); }
+            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(0,123,255,0); }
+        }
+        .pulse {
+            animation: micPulse 1.8s ease-in-out infinite;
+        }
+        @media (prefers-reduced-motion: reduce) {
+            .pulse { animation: none; }
+        }
+
+        /* ===== Mensagem de dica abaixo do microfone ===== */
+        #pressHint {
+            display: block;
+            font-size: 12px;
+            color: #666;
+            margin-top: 8px;
+            line-height: 1.2;
+        }
+
+        /* ===== Dots de progresso ===== */
+        .dots {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            margin: 8px auto 18px auto; /* fica entre o título e a imagem */
+            flex-wrap: wrap;
+            max-width: 520px;
+        }
+        .dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            border: 2px solid #ccc;
+            background: #eee;
+            transition: transform 0.2s ease, background 0.2s ease, border-color 0.2s ease;
+        }
+        .dot.active {
+            border-color: #007BFF;
+            transform: scale(1.25);
+        }
+        .dot.done {
+            background: #2ecc71; /* verde */
+            border-color: #2ecc71;
+        }
+
         #finalFeedback {
             font-size: 2em;
             color: green;
@@ -162,6 +214,7 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
+
         @media (max-width: 768px) {
             h1 {
                 font-size: 2em;
@@ -174,21 +227,32 @@
                 width: 40px;
                 height: 40px;
             }
+            /* dots menores em mobile */
+            .dot { width: 10px; height: 10px; }
+            #pressHint { font-size: 11px; }
         }
     </style>
 </head>
 <body>
     <button id="backButton" class="button">Back</button>
     <h1>Word Reading Practice</h1>
+
+    <!-- ===== Bolinhas de progresso (entre o título e a imagem) ===== -->
+    <div id="progressDots" class="dots" role="group" aria-label="Progress"></div>
+
     <div class="container">
         <img id="image" class="image" src="" alt="Image">
         <img id="icon" class="icon" src="businessman.png" alt="Icon">
     </div>
     <div class="word" id="word"></div>
     <img id="correctGif" src="certo.gif" alt="Correct animation" style="display: none; width: 150px; height: auto; margin: 10px auto;">
-    <button id="startButton">
+
+    <!-- ===== Botão do Microfone + Mensagem ===== -->
+    <button id="startButton" aria-label="Press the microphone and read the word">
         <img src="microfone.png" alt="Start Speaking">
     </button>
+    <small id="pressHint">Press the microphone and read the word.</small>
+
     <div class="result" id="result"></div>
     <div class="navigation">
         <button id="prevButton" class="button nav-button">Previous</button>
@@ -269,12 +333,18 @@
             .then(data => {
                 words = data.split('\n').map(w => w.trim()).filter(Boolean);
                 words.forEach((_, idx) => { attemptsPerWord[idx] = 0; });
+                // Renderiza dots de progresso
+                renderProgressDots();
+                // Inicializa dica do microfone (se aplicável)
+                initPressHint();
+                // Carrega primeira palavra
                 loadWord(currentWordIndex);
             })
             .catch(error => console.error('Error fetching words:', error));
 
         // ===== UI bindings (mantido) =====
         const startButton = document.getElementById("startButton");
+        const pressHintEl = document.getElementById("pressHint");
         const prevButton = document.getElementById("prevButton");
         const nextButton = document.getElementById("nextButton");
         const resultDiv = document.getElementById("result");
@@ -283,6 +353,7 @@
         const iconElement = document.getElementById("icon");
         const finalFeedbackDiv = document.getElementById("finalFeedback");
         const restartButton = document.getElementById("restartButton");
+        const dotsContainer = document.getElementById("progressDots");
 
         // ====== LER PALAVRA PELO ÍCONE (MP3 -> TTS) ======
         iconElement.addEventListener('click', async () => {
@@ -297,6 +368,8 @@
         recognition.maxAlternatives = 1;
 
         startButton.addEventListener('click', () => {
+            // Primeira vez que o usuário clica: esconder dica e memorizar
+            dismissPressHintIfFirstUse();
             disableStartButton();
             startRecognition();
         });
@@ -323,7 +396,7 @@
             attemptsPerWord[currentWordIndex]++;
             if (speechResult.includes(expectedWord)) {
                 handleCorrectAnswer();
-                attemptsPerWord[currentWordIndex] = 3;
+                attemptsPerWord[currentWordIndex] = 3; // conclui esta palavra
             } else {
                 if (attemptsPerWord[currentWordIndex] < 3) {
                     handleIncorrectAttempt();
@@ -331,6 +404,8 @@
                     enableNextWord();
                 }
             }
+            // Atualiza dots conforme progresso atual
+            updateProgressDots();
             checkCompletion();
         };
 
@@ -348,6 +423,8 @@
         };
 
         function startRecognition() {
+            // Remover pulso enquanto reconhece
+            startButton.classList.remove('pulse');
             recognition.start();
             recognitionTimeout = setTimeout(() => { recognition.stop(); }, 5000);
         }
@@ -368,8 +445,11 @@
                 imageElement.src = '';
             };
 
+            // Dots: destacar a bolinha corrente
+            highlightCurrentDot(currentWordIndex);
+
             resetFeedback();
-            enableStartButton();
+            enableStartButton(); // recoloca pulso quando pronto para ouvir
         }
 
         // ===== Fluxos de acerto/erro (mantidos, com MP3 no try again) =====
@@ -384,6 +464,9 @@
 
             const audio = new Audio("certo.mp3");
             audio.play();
+
+            // Atualiza dots como concluído antes de avançar
+            updateProgressDots();
 
             setTimeout(() => {
                 correctGif.style.display = "none";
@@ -409,6 +492,10 @@
         function enableNextWord() {
             resultDiv.textContent = "Moving to the next word...";
             resultDiv.style.color = "orange";
+
+            // Atualiza dots como concluído (tentativas esgotadas)
+            updateProgressDots();
+
             setTimeout(() => {
                 if (currentWordIndex + 1 < words.length) {
                     loadWord(currentWordIndex + 1);
@@ -612,10 +699,89 @@
             finalFeedbackDiv.style.display = "none";
             restartButton.style.display = "none";
             wordsTried = 0;
+            // dots continuam representando o estado atual de attemptsPerWord (não alteramos lógica existente)
+            highlightCurrentDot(0);
             loadWord(0);
         }
-        function disableStartButton() { startButton.disabled = true; }
-        function enableStartButton()  { startButton.disabled = false; }
+        function disableStartButton() {
+            startButton.disabled = true;
+            // remove animação quando desabilitado
+            startButton.classList.remove('pulse');
+        }
+        function enableStartButton()  {
+            startButton.disabled = false;
+            // adiciona animação quando está pronto para ouvir
+            startButton.classList.add('pulse');
+        }
+
+        /* =========================
+           NOVO: Dots de progresso
+           ========================= */
+        function renderProgressDots() {
+            if (!dotsContainer) return;
+            dotsContainer.innerHTML = '';
+            for (let i = 0; i < words.length; i++) {
+                const dot = document.createElement('span');
+                dot.className = 'dot';
+                dot.setAttribute('aria-label', `Word ${i + 1}`);
+                dot.setAttribute('aria-hidden', 'true'); // indicadores visuais
+                dotsContainer.appendChild(dot);
+            }
+            updateProgressDots();
+            highlightCurrentDot(currentWordIndex);
+        }
+
+        function updateProgressDots() {
+            if (!dotsContainer) return;
+            const dots = dotsContainer.querySelectorAll('.dot');
+            dots.forEach((d, i) => {
+                if (attemptsPerWord[i] >= 3) {
+                    d.classList.add('done');
+                } else {
+                    d.classList.remove('done');
+                }
+            });
+            // manter destaque da atual
+            highlightCurrentDot(currentWordIndex);
+        }
+
+        function highlightCurrentDot(index) {
+            if (!dotsContainer) return;
+            const dots = dotsContainer.querySelectorAll('.dot');
+            dots.forEach((d, i) => {
+                if (i === index) d.classList.add('active');
+                else d.classList.remove('active');
+            });
+        }
+
+        /* =========================
+           NOVO: Mensagem "Press the microphone..."
+           ========================= */
+        function getPressHintKey() {
+            const { level, unit, fase } = params;
+            return `pressHintDismissed-${level}-${unit}-${fase}`;
+        }
+        function initPressHint() {
+            const key = getPressHintKey();
+            try {
+                const dismissed = localStorage.getItem(key) === '1';
+                if (dismissed) {
+                    pressHintEl.style.display = 'none';
+                } else {
+                    pressHintEl.style.display = 'block';
+                }
+            } catch(e) {
+                // se localStorage indisponível, mostra a dica por padrão
+                pressHintEl.style.display = 'block';
+            }
+        }
+        function dismissPressHintIfFirstUse() {
+            const key = getPressHintKey();
+            if (pressHintEl.style.display !== 'none') {
+                pressHintEl.style.display = 'none';
+                try { localStorage.setItem(key, '1'); } catch(e) {}
+            }
+        }
     </script>
 </body>
 </html>
