--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -24,7 +24,7 @@
 
     /* ===== Layout de página: 3 faixas (header / conteúdo / navegação) ===== */
     #page {
-      min-height: 100dvh;              /* unidades de viewport modernas */
+      min-height: 100dvh;                 /* unidades de viewport modernas */
       min-height: -webkit-fill-available; /* fallback iOS */
       display: grid;
       grid-template-rows: auto 1fr auto;  /* header / conteúdo / rodapé */
@@ -86,27 +86,30 @@
     .step-dot.half { background:#f2b01e; }
     .step-dot.done { background:#2e7d32; }
 
-    /* ===== Área de diálogos =====
-       Torna-se a "faixa flexível" da grade, com overflow interno caso necessário.
-    */
+    /* ===== Área de diálogos ===== */
     #content-wrap {
       display: flex;
       flex-direction: column;
-      min-height: 0;       /* importante para permitir overflow interno */
+      min-height: 0; /* permite overflow interno */
+      align-items: center;
+    }
+
+    /* Contêiner central com largura controlada para aproximar personagens em telas grandes */
+    .dialogue-max {
+      width: 100%;
+      max-width: 880px; /* aproxima bem os dois lados no desktop/tablet */
+      padding: 8px 12px;
     }
 
     #dialogue-container {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-columns: repeat(2, minmax(0, 1fr)); /* desktop/tablet: lado a lado */
       align-items: start;
       justify-content: center;
-      gap: 12px;
-      padding: 8px 12px;
+      gap: 18px; /* mais próximo que antes */
       max-width: 100%;
       width: 100%;
-      /* Se ainda assim, em alguns aparelhos, estourar, permite rolagem interna sem rolar a página inteira */
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
+      /* Em telas grandes não limitamos a altura dos balões (sem cortes) */
     }
 
     .character {
@@ -115,34 +118,34 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
       min-width: 0;
     }
 
     .character img {
-      width: clamp(72px, 22vw, 140px);
+      width: clamp(96px, 18vw, 160px);
       height: auto;
       border-radius: 50%;
       flex: 0 0 auto;
     }
 
     .character-text {
-      font-size: clamp(12px, 3.6vw, 18px);
+      font-size: clamp(14px, 1.8vw, 18px);
       font-weight: bold;
       background-color: #ffffff;
-      padding: 10px 12px;
-      border-radius: 10px;
+      padding: 12px 14px;
+      padding-right: 34px; /* reserva espaço pro badge não ser cortado */
+      border-radius: 12px;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
       max-width: 100%;
-      min-height: 48px; /* garante presença do balão mesmo vazio */
+      min-height: 52px;
       position: relative;
       transition: border-color .2s ease, box-shadow .2s ease, background-color .2s ease;
       margin: 0;
-      line-height: 1.25;
-      /* Se o texto for grande, o balão passa a rolar internamente (não a página) */
-      max-height: 28vh;
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
+      line-height: 1.28;
+      /* Importante: no desktop/tablet deixamos crescer sem cortar conteúdo */
+      overflow: visible;
+      word-break: break-word;
     }
 
     /* Balão placeholder (em caso de bloco sem fala do aluno) */
@@ -184,7 +187,7 @@
       color: white;
       border: none;
       padding: 10px 14px;
-      font-size: clamp(12px, 3.8vw, 16px);
+      font-size: clamp(12px, 3.2vw, 16px);
       cursor: pointer;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
       margin: 0;
@@ -240,14 +243,15 @@
     /* ===== Visual progress badges nas bolhas ===== */
     .progress-badge {
       position: absolute;
-      top: -6px;
-      right: -6px;
-      font-size: 11px;
+      top: 6px;     /* agora dentro do balão, não corta mais */
+      right: 6px;
+      font-size: 12px;
       padding: 3px 6px;
       border-radius: 999px;
       background: #e0e0e0; /* base */
       color: #000;
       box-shadow: 0 1px 3px rgba(0,0,0,.2);
+      line-height: 1;
     }
     .badge-half { background: #ffe08a; }
     .badge-full { background: #a5d6a7; }
@@ -302,27 +306,39 @@
       .pulse, .highlight-once, .success-flash, .forward-pulse { animation: none; outline: none; box-shadow: none; }
     }
 
-    /* ===== Ajustes adicionais para telas pequenas ===== */
+    /* ===== Tablets médios (encurta levemente) ===== */
+    @media (max-width: 900px) {
+      .dialogue-max { max-width: 760px; }
+      .character img { width: clamp(90px, 22vw, 140px); }
+      .character-text { font-size: clamp(13px, 2.2vw, 17px); }
+    }
+
+    /* ===== Celular: empilhado (um em cima do outro) ===== */
     @media (max-width: 600px) {
-      .back-button { font-size: 14px; padding: 8px 12px; min-height: 36px; }
-      .nav-button { font-size: clamp(12px, 3.8vw, 15px); padding: 10px 12px; }
       #dialogue-container { 
-        grid-template-columns: repeat(2, minmax(0, 1fr)); 
-        gap: 10px; 
-        padding: 8px 10px; 
+        grid-template-columns: 1fr;  /* empilhado */
+        gap: 14px; 
       }
+      .dialogue-max { padding: 8px 10px; }
+      .character img { width: clamp(84px, 28vw, 120px); }
       .character-text { 
-        font-size: clamp(12px, 3.6vw, 16px);
-        padding: 8px 10px; 
-        max-height: 28vh;
+        font-size: clamp(14px, 3.8vw, 16px);
+        padding: 10px 12px;
+        /* Em celulares, geralmente cabe sem cortar.
+           Se o texto for EXTREMAMENTE longo, permita rolagem interna moderada. */
+        max-height: 45vh;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
       }
       .audio-button-container { min-height: 40px; }
+      .nav-button { font-size: clamp(12px, 3.6vw, 15px); }
+      .step-dot { width: 8px; height: 8px; }
     }
 
     /* Ultra-compacto para aparelhos muito pequenos (largura <= 360px) */
     @media (max-width: 360px) {
-      .character img { width: clamp(64px, 24vw, 110px); }
-      .character-text { max-height: 26vh; }
+      .character img { width: clamp(72px, 30vw, 110px); }
+      .character-text { max-height: 46vh; }
       .nav-button { min-height: 42px; }
       .step-dot { width: 7px; height: 7px; }
     }
@@ -337,20 +353,22 @@
     </div>
 
     <div id="content-wrap">
-      <div id="dialogue-container">
-        <div class="character" id="robot">
-          <img id="robot-img" src="../../../../../imagens/robo1_static.png" alt="Robot Lex" />
-          <div class="character-text" id="robot-text"></div>
-          <div class="audio-button-container">
-            <button class="audio-button" id="robot-audio-button">🔊</button>
+      <div class="dialogue-max">
+        <div id="dialogue-container">
+          <div class="character" id="robot">
+            <img id="robot-img" src="../../../../../imagens/robo1_static.png" alt="Robot Lex" />
+            <div class="character-text" id="robot-text"></div>
+            <div class="audio-button-container">
+              <button class="audio-button" id="robot-audio-button">🔊</button>
+            </div>
           </div>
-        </div>
 
-        <div class="character" id="student">
-          <img id="student-img" src="../../../../../imagens/avatar_aluno1.png" alt="Student Avatar" />
-          <div class="character-text" id="student-text"></div>
-          <div class="audio-button-container">
-            <button class="audio-button" id="student-audio-button">🔊</button>
+          <div class="character" id="student">
+            <img id="student-img" src="../../../../../imagens/avatar_aluno1.png" alt="Student Avatar" />
+            <div class="character-text" id="student-text"></div>
+            <div class="audio-button-container">
+              <button class="audio-button" id="student-audio-button">🔊</button>
+            </div>
           </div>
         </div>
       </div>
@@ -479,7 +497,7 @@
       });
     }
 
-    // ======== Prompting logic for audio buttons and forward ========
+    // ======== Prompting logic for áudio e forward ========
     function clearPromptAnimations() {
       robotBtn.classList.remove('pulse','highlight-once','success-flash');
       studentBtn.classList.remove('pulse','highlight-once','success-flash');
