--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -109,7 +109,6 @@
       gap: 18px; /* mais próximo que antes */
       max-width: 100%;
       width: 100%;
-      /* Em telas grandes não limitamos a altura dos balões (sem cortes) */
     }
 
     .character {
@@ -133,8 +132,8 @@
       font-size: clamp(14px, 1.8vw, 18px);
       font-weight: bold;
       background-color: #ffffff;
-      padding: 12px 14px;
-      padding-right: 34px; /* reserva espaço pro badge não ser cortado */
+      /* Espaço reservado para o badge: */
+      padding: 34px 40px 12px 14px; /* top e right maiores: badge nunca cobre texto */
       border-radius: 12px;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
       max-width: 100%;
@@ -143,8 +142,7 @@
       transition: border-color .2s ease, box-shadow .2s ease, background-color .2s ease;
       margin: 0;
       line-height: 1.28;
-      /* Importante: no desktop/tablet deixamos crescer sem cortar conteúdo */
-      overflow: visible;
+      overflow: visible; /* badge fica totalmente visível */
       word-break: break-word;
     }
 
@@ -243,8 +241,8 @@
     /* ===== Visual progress badges nas bolhas ===== */
     .progress-badge {
       position: absolute;
-      top: 6px;     /* agora dentro do balão, não corta mais */
-      right: 6px;
+      top: 8px;     /* fica dentro do balão, mas com espaço reservado */
+      right: 10px;
       font-size: 12px;
       padding: 3px 6px;
       border-radius: 999px;
@@ -252,6 +250,8 @@
       color: #000;
       box-shadow: 0 1px 3px rgba(0,0,0,.2);
       line-height: 1;
+      pointer-events: none; /* não bloqueia clique/seleção no texto */
+      z-index: 1;
     }
     .badge-half { background: #ffe08a; }
     .badge-full { background: #a5d6a7; }
@@ -323,9 +323,9 @@
       .character img { width: clamp(84px, 28vw, 120px); }
       .character-text { 
         font-size: clamp(14px, 3.8vw, 16px);
-        padding: 10px 12px;
-        /* Em celulares, geralmente cabe sem cortar.
-           Se o texto for EXTREMAMENTE longo, permita rolagem interna moderada. */
+        /* Mantém o espaço pro badge no mobile também */
+        padding: 34px 40px 12px 12px;
+        /* Em celulares, se o texto for muito longo, liberamos scroll interno */
         max-height: 45vh;
         overflow: auto;
         -webkit-overflow-scrolling: touch;
@@ -497,7 +497,7 @@
       });
     }
 
-    // ======== Prompting logic for áudio e forward ========
+    // ======== Prompting logic para áudio e forward ========
     function clearPromptAnimations() {
       robotBtn.classList.remove('pulse','highlight-once','success-flash');
       studentBtn.classList.remove('pulse','highlight-once','success-flash');
