--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -14,6 +14,7 @@
     html, body {
       height: 100%;
       min-height: -webkit-fill-available; /* iOS Safari fallback */
+      scrollbar-gutter: stable both-edges; /* evita flicker de scrollbar */
     }
     * { box-sizing: border-box; }
 
@@ -25,6 +26,11 @@
       display: flex;
       flex-direction: column;
       align-items: stretch;
+    }
+
+    /* Em telas grandes, força a presença da barra de rolagem para não “piscar” */
+    @media (min-width: 901px){
+      body{ overflow-y: scroll; }
     }
 
     /* ===== Layout de página ===== */
@@ -105,7 +111,6 @@
       width: 100%;
       max-width: 880px; /* aproxima no desktop/tablet */
       padding: 8px 12px;
-      /* permite rolagem do conteúdo central sem atingir o rodapé fixo */
     }
 
     #dialogue-container {
@@ -118,6 +123,10 @@
       width: 100%;
       overflow: auto; /* rolagem própria se necessário */
       -webkit-overflow-scrolling: touch;
+      scrollbar-gutter: stable;
+      /* IMPORTANTÍSSIMO: respiro no fim para o rodapé fixo não cobrir o último botão */
+      padding-bottom: calc(var(--nav-h) + 24px);
+      padding-top: 4px;
     }
 
     .character {
@@ -157,6 +166,7 @@
       max-height: 55vh;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
+      scrollbar-gutter: stable;
     }
 
     /* Balão placeholder (sem fala do aluno) */
@@ -192,8 +202,7 @@
       backdrop-filter: saturate(140%) blur(6px);
       border-top: 1px solid rgba(0,0,0,0.08);
       padding: 8px 12px calc(8px + env(safe-area-inset-bottom));
-      /* altura “visual” para cálculo do var(--nav-h) */
-      min-height: var(--nav-h);
+      min-height: var(--nav-h); /* altura usada no padding-bottom do page */
     }
 
     .nav-button {
